Fix workflow for pure Python package: remove cibuildwheel
- Replace cibuildwheel with standard python -m build for pure Python packages
- Fix pyproject.toml to properly include sqltap.templates package
- Remove cibuildwheel.toml (not needed for pure Python)
- Update workflow to build wheels for all Python versions on all platforms
- Successfully tested local build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ Issues = "https://github.com/brunobcardoso/sqltap-profiler/issues"
 Documentation = "https://github.com/brunobcardoso/sqltap-profiler#readme"
 
 [tool.setuptools]
-packages = ["sqltap"]
+packages = ["sqltap", "sqltap.templates"]
 package-data = {sqltap = ["templates/*.mako"]}
 
 [tool.isort]
