--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,40 +16,29 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build wheel cibuildwheel
+        pip install build wheel
 
-    - name: Build wheels (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        cibuildwheel --platform linux --output-dir dist/
-
-    - name: Build wheels (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        cibuildwheel --platform windows --output-dir dist/
-
-    - name: Build wheels (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        cibuildwheel --platform macos --output-dir dist/
+    - name: Build wheel
+      run: python -m build --wheel
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
         path: ./dist/*.whl
-        name: wheels
+        name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
 
   build-sdist:
     name: Build source distribution
@@ -95,7 +84,7 @@ jobs:
     - name: Download wheels
       uses: actions/download-artifact@v4
       with:
-        name: wheels
+        name: wheels-ubuntu-latest-py${{ matrix.python-version }}
         path: dist/
 
     - name: Install wheel
