--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -10,12 +10,11 @@ on:
     types: [ published ]
 
 jobs:
-  build-wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  build-linux-wheels:
+    name: Build Linux wheels for Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
@@ -34,11 +33,11 @@ jobs:
     - name: Build wheel
       run: python -m build --wheel
 
-    - name: Upload wheels
+    - name: Upload Linux wheels
       uses: actions/upload-artifact@v4
       with:
         path: ./dist/*.whl
-        name: wheels-${{ matrix.os }}-py${{ matrix.python-version }}
+        name: linux-wheels-py${{ matrix.python-version }}
 
   build-sdist:
     name: Build source distribution
@@ -65,10 +64,10 @@ jobs:
         path: ./dist/*.tar.gz
         name: sdist
 
-  test-wheels:
-    name: Test wheels
+  test-linux-wheels:
+    name: Test Linux wheels
     runs-on: ubuntu-latest
-    needs: [build-wheels, build-sdist]
+    needs: [build-linux-wheels, build-sdist]
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
@@ -81,10 +80,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Download wheels
+    - name: Download Linux wheels
       uses: actions/download-artifact@v4
       with:
-        name: wheels-ubuntu-latest-py${{ matrix.python-version }}
+        name: linux-wheels-py${{ matrix.python-version }}
         path: dist/
 
     - name: Install wheel
@@ -96,3 +95,33 @@ jobs:
       run: |
         python -c "import sqltap; print('sqltap version:', sqltap.__version__ if hasattr(sqltap, '__version__') else 'unknown')"
         python -c "import sqltap; profiler = sqltap.start(); print('Profiler started successfully')"
+
+  build-other-platforms:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']  # Skip 3.7 for macOS ARM64
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build wheel
+
+    - name: Build wheel
+      run: python -m build --wheel
+
+    - name: Upload wheels
+      uses: actions/upload-artifact@v4
+      with:
+        path: ./dist/*.whl
+        name: ${{ matrix.os }}-wheels-py${{ matrix.python-version }}
