--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v4
@@ -70,7 +70,7 @@ jobs:
     needs: [build-linux-wheels, build-sdist]
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v4
@@ -95,33 +95,3 @@ jobs:
       run: |
         python -c "import sqltap; print('sqltap version:', sqltap.__version__ if hasattr(sqltap, '__version__') else 'unknown')"
         python -c "import sqltap; profiler = sqltap.start(); print('Profiler started successfully')"
-
-  build-other-platforms:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']  # Skip 3.7 for macOS ARM64
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build wheel
-
-    - name: Build wheel
-      run: python -m build --wheel
-
-    - name: Upload wheels
-      uses: actions/upload-artifact@v4
-      with:
-        path: ./dist/*.whl
-        name: ${{ matrix.os }}-wheels-py${{ matrix.python-version }}
