--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -89,7 +89,10 @@ jobs:
     - name: Install wheel
       run: |
         python -m pip install --upgrade pip
-        pip install dist/*.whl
+        # Install only the latest version to avoid conflicts
+        # Find the highest version number wheel
+        latest_wheel=$(ls dist/*.whl | sort -V | tail -1)
+        pip install "$latest_wheel"
 
     - name: Test installation
       run: |
