fix: pyproject package and ci publish option
remove old legacy setup py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ Issues = "https://github.com/brunobcardoso/sqltap-profiler/issues"
 Documentation = "https://github.com/brunobcardoso/sqltap-profiler#readme"
 
 [tool.setuptools]
-packages = ["sqltap", "sqltap.templates"]
+packages = ["sqltap"]
 package-data = {sqltap = ["templates/*.mako"]}
 
 [tool.isort]
