--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -107,22 +107,27 @@ jobs:
     permissions:
       contents: read
       id-token: write
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      # Grab ALL wheels from the matrix + the sdist into ./dist
+      - name: Download wheels
+        uses: actions/download-artifact@v4
+        with:
+          pattern: linux-wheels-*
+          merge-multiple: true
+          path: dist/
 
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
+      - name: Download sdist
+        uses: actions/download-artifact@v4
+        with:
+          name: sdist
+          path: dist/
 
-    - name: Build package
-      run: python -m build
+      # Optional: show what we’re about to upload
+      - run: ls -l dist
 
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist/
